--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1126,7 +1126,8 @@ Terahertz spectroscopy of ferroelectrics and related materials
   number={27},
   pages={65--68},
   year={1947},
-  publisher={IET}
+  publisher={IET},
+  abstract={The paper investigates the values of permittivity and permeability of a mixture consisting of a homogeneous material in which particles are embedded. Formulae are found which are valid at high frequencies, so long as the size of the particle is small compared with the wavelength and the packing is not too great.Special cases treated are iron-dust cores and expanded dielectrics in which the "particles" are air bubbles. For ferromagnetic materials, weak fields only are assumed, so that the results refer to initial permeability.On account of the heterogeneity of the mixture, the permeability may become lossy (i.e. mu may be complex). Even when the substances are all non-ferromagnetic, the permeability of the mixture may depart from unity, or be complex.}
 }
 
 @article{peng2007,
